Completed home page

--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 /* Home page */
-
+@import url("https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap");
 body {
     margin: 0;
     width: 100%;
     background-image: url("images/backgroundHome.jpg");
     background-size: cover;
     background-repeat: repeat;
+    font-family: "Open sans";
 }
 
 nav {
@@ -15,6 +16,7 @@ nav {
     align-items: center;
     background-color: rgba(0, 0, 0, 0.81);
     color: white;
+    font-family: sans-serif;
 }
 
 .nav-section-1 {
@@ -22,6 +24,7 @@ nav {
     align-items: center;
     gap: 20px;
     margin-left: 20px;
+    font-family: "Fredericka the Great", serif;
 }
 
 .nav-section-1 img {
@@ -63,12 +66,13 @@ main {
 .hero {
     width: 70%;
     height: 70%;
-    background: rgb(226, 225, 230);
+    background: rgb(236, 234, 244);
     position: absolute;
     top: 20%;
     left: 20%;
     display: flex;
-    border-radius: 10px;
+    border-radius: 3px;
+    box-shadow: 5px 5px rgba(0, 0, 0, 0.162);
 }
 
 .hero div {
@@ -95,4 +99,6 @@ main {
     align-items: center;
     justify-content: center;
     margin: 0 20px;
+    text-align: center;
+    font-family: sans-serif;
 }
