--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ main {
     grid-template-columns: 1fr 3fr 1fr 3fr;
     grid-template-rows: 1fr 1fr 1fr;
     column-gap: 20px;
-    padding: 20px;
+    padding: 10px;
 }
 
 .grid > div {
@@ -185,5 +185,5 @@ main {
     margin: 10px;
     border-radius: 10px;
     padding: 10px;
-    text-align: center;
+    box-shadow: 5px 5px rgba(0, 0, 0, 0.162);
 }
