--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ body {
     font-family: "Open sans";
 }
 
+h1 {
+    font-family: "Open sans";
+}
+
 nav {
     height: 70px;
     display: flex;
@@ -77,7 +81,7 @@ main {
     height: 75%;
     background: rgba(236, 234, 244, 0.98);
     position: absolute;
-    top: 15%;
+    top: 20%;
     left: 15%;
     display: flex;
     border-radius: 3px;
@@ -128,7 +132,7 @@ main {
     height: 75%;
     background: rgba(236, 234, 244, 0.98);
     position: absolute;
-    top: 15%;
+    top: 20%;
     left: 15%;
     display: flex;
     border-radius: 3px;
@@ -164,7 +168,7 @@ main {
     height: 75%;
     background: rgba(236, 234, 244, 0.98);
     position: absolute;
-    top: 15%;
+    top: 20%;
     left: 15%;
     display: flex;
     border-radius: 3px;
@@ -186,4 +190,39 @@ main {
     border-radius: 10px;
     padding: 10px;
     box-shadow: 5px 5px rgba(0, 0, 0, 0.162);
+}
+
+/* Portfolio page */
+
+.portfolio-body {
+    background-image: url("images/backgroundPortfolio.jpg");
+    background-size: contain;
+}
+
+.portfolio-hero {
+    width: 75%;
+    height: 75%;
+    background: rgba(236, 234, 244, 0.98);
+    position: absolute;
+    top: 20%;
+    left: 15%;
+    display: flex;
+    flex-wrap: wrap;
+    border-radius: 3px;
+    box-shadow: 5px 5px rgba(0, 0, 0, 0.162);
+    justify-content: center;
+    align-self: center;
+    gap: 10px;
+}
+
+.project {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    background-color: rgba(0, 0, 0, 0.068);
+    box-shadow: 5px 5px rgba(0, 0, 0, 0.162);
+    margin: 20px;
+    border-radius: 10px;
 }
