--- a/style.css
+++ b/style.css
@@ -216,21 +216,22 @@ footer {
     left: 15%;
     display: flex;
     flex-wrap: wrap;
+    align-self: center;
+    justify-content: center;
     border-radius: 3px;
     box-shadow: 5px 5px rgba(0, 0, 0, 0.162);
-    justify-content: center;
-    align-self: center;
-    gap: 10px;
 }
 
 .project {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    width: 40%;
     background-color: rgba(0, 0, 0, 0.068);
     box-shadow: 5px 5px rgba(0, 0, 0, 0.162);
-    margin: 20px;
+    border-radius: 10px;
+    flex-direction: column;
+    margin: 10px;
+}
+
+.project img {
     border-radius: 10px;
 }
