--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@ footer {
     left: 15%;
     display: flex;
     flex-wrap: wrap;
-    align-self: center;
+    align-items: center;
     justify-content: center;
     border-radius: 3px;
     box-shadow: 5px 5px rgba(0, 0, 0, 0.162);
@@ -234,4 +234,20 @@ footer {
 
 .project img {
     border-radius: 10px;
+}
+
+.links {
+    display: flex;
+    margin: 20px;
+    gap: 10px;
+}
+
+.links a {
+    color: black;
+    text-decoration: none;
+}
+
+.links a:hover {
+    cursor: pointer;
+    color: #e10903;
 }
