--- a/style.css
+++ b/style.css
@@ -234,6 +234,13 @@ footer {
 
 .project img {
     border-radius: 10px;
+    box-shadow: 3px 3px rgba(0, 0, 0, 0.162);
+}
+
+.project img:hover {
+    cursor: pointer;
+    -webkit-transform: scale(1.3);
+    transform: scale(1.05);
 }
 
 .links {
