--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ main {
 .hero img {
     height: 90%;
     width: auto;
+    border-radius: 5px;
 }
 
 .hero div:last-child {
@@ -161,8 +162,21 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    text-align: center;
     padding: 20px;
+}
+
+.bio-hero ul {
+    text-align: left;
+    list-style-type: none;
+}
+
+li {
+    margin: 10px 0;
+}
+
+li:before {
+    content: "#";
+    padding: 10px 5px;
 }
 
 /* Experience page */
